# pronghorn

./: .gitignore  CMakeLists.txt  FindFUSE.cmake  FindTSK.cmake  INSTALL  README  pronghorn_testing.sh
config/: CMakeLists.txt  pronghorn.conf.template  subcontractor_compression.conf.template  subcontractor_image.conf  subcontractor_sleuth.conf.template  subcontractor_text.conf.template  subcontractor_video.conf.template
doc/: FAQ  FUTURE_FEATURES  Features  KNOWN_ISSUES  LCA2013_Presentation.pdf.readme.txt
doc/source_doc/: CMakeLists.txt  Doxyfile.in
src/: CMakeLists.txt
src/3rd_party_libjbig/: CMakeLists.txt  jbig.c  jbig.txt  jbig85.c  tstcodec.c  tstcodec85.c
src/contractor/: CMakeLists.txt  contractor.c
src/examples/: CMakeLists.txt  configexample.c  configserver_test.c  lightmagic_test.c  magic.mgc  pronghorn.py  transport_test.c
src/libpronghorn/: CMakeLists.txt  base_fuse.c  base_fuse.h  basename_safe.c  basename_safe.h  block_range.c  block_range.h  block_test.c  blocks.c  blocks.h  config.c  config.h  contract.c  contract.h  defaults.h  lightmagic.c  lightmagic.h  log.c  log.h  logger.c  logger.h  lprocess.c  lprocess.h  prong_assert.c  prong_assert.h  report.c  report.h  result.c  result.h  sanity.c  sanity.h  structures.pb-c.c  structures.pb-c.h  structures.proto  transport.c  transport.h
src/logserver/: CMakeLists.txt  logserver.c
src/mcp/: CMakeLists.txt  basic_print.c  basic_print.h  block_storage.c  block_storage.h  contractor_controller.c  contractor_controller.h  data_source.c  data_source.h  dfrws_print.c  dfrws_print.h  file_manager.c  file_manager.h  job_node.c  job_node.h  mcp.c  print_manager.c  print_manager.h
src/pronghorn/: CMakeLists.txt  config_management.c  config_management.h  pronghorn.c
src/rawmount/: CMakeLists.txt  rawmount.c
src/scripts/: CMakeLists.txt  normalize_syntax  pronghorn.template  runconfigserver_only.sh  testharness.sh  unmount_all
src/subcontractors/: CMakeLists.txt  subcontractor_helper.c  subcontractor_helper.h
src/subcontractors/development_and_testing/: CMakeLists.txt  example_fuse.c  subcontractor_template.c  subcontractor_test_crash.c  subcontractor_test_hang.c  subcontractor_test_invalid_contracts.c  test_harness.c
src/subcontractors/subcontractor_compression/: CMakeLists.txt  subcontractor_compression.c
src/subcontractors/subcontractor_image/: CMakeLists.txt  subcontractor_image.c
src/subcontractors/subcontractor_jbig/: CMakeLists.txt  subcontractor_jbig.c
src/subcontractors/subcontractor_ole/: CMakeLists.txt  pole.cpp  pole.h  subcontractor_ole.cpp
src/subcontractors/subcontractor_partitiontable/: CMakeLists.txt  subcontractor_partitiontable.c
src/subcontractors/subcontractor_pdf/: CMakeLists.txt  subcontractor_pdf.c
src/subcontractors/subcontractor_sleuth/: CMakeLists.txt  subcontractor_sleuth.c
src/subcontractors/subcontractor_text/: CMakeLists.txt  TODO  ascii85.c  ascii85.h  subcontractor_text.c  text_helper.c  text_helper.h
src/subcontractors/subcontractor_video/: CMakeLists.txt  subcontractor_video.c
src/subcontractors/subcontractor_zlib/: CMakeLists.txt  subcontractor_zlib.c
