CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(libjbig)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ../../libs)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../../libs)

INCLUDE_DIRECTORIES(../../include)

ADD_LIBRARY(libjbig STATIC jbig.c jbig_ar.c)

SET_TARGET_PROPERTIES(libjbig PROPERTIES OUTPUT_NAME jbig)

FILE(MAKE_DIRECTORY ../../include)
FILE(GLOB HEADERS *.h)
FOREACH(HEADER ${HEADERS})
  ADD_CUSTOM_COMMAND(TARGET libjbig POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${HEADER} ../../include COMMENT "Copying libjbig header file '${HEADER}' to local include directory")
ENDFOREACH()

