CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(rawmount)

INCLUDE_DIRECTORIES(../../include)
INCLUDE_DIRECTORIES(${glib_INCLUDE_DIRS})

LINK_DIRECTORIES(${glib_LIBRARY_DIRS})

ADD_EXECUTABLE(rawmount rawmount.c)
TARGET_LINK_LIBRARIES(rawmount glib-2.0)
TARGET_LINK_LIBRARIES(rawmount libpronghorn)
TARGET_LINK_LIBRARIES(rawmount fuse)

INSTALL(TARGETS rawmount DESTINATION pronghorn PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

