CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(scripts)

INSTALL(FILES unmount_all DESTINATION pronghorn PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/pronghorn.template ${CMAKE_CURRENT_SOURCE_DIR}/pronghorn @ONLY)

INSTALL(FILES pronghorn DESTINATION bin RENAME pronghorn PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

